--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boggle",
+  "name": "boggle-solver",
   "version": "1.0.0",
   "description": "boggle solver",
   "main": "boggle.js",
