--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boggle-solver",
   "version": "1.0.0",
   "description": "boggle solver",
-  "main": "boggle.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "mocha -R spec spec.js"
   },
